using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string attackTrigger = "attack";

    internal static string damageTrigger = "damage";
    internal static string canMove = "canMove";
    internal static string player_detected = "player_detected";

    internal static string attack_detected = "attack_detected";

    internal static string damage_detected = "damage_detected";

    internal static string isGrounded = "isGrounded";

    internal static string jump = "jump";
    internal static string yVelocity = "yVelocity";

    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";

}